--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,74 @@
 name: CI
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    push:
+        branches: [master]
+    pull_request:
+        branches: [master]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
+    lint:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.21'
+            - name: Set up Go
+              uses: actions/setup-go@v4
+              with:
+                  go-version: '1.21'
 
-    - name: Test
-      run: go test -v -race -coverprofile=coverage.out ./...
+            - name: golangci-lint
+              uses: golangci/golangci-lint-action@v3
+              with:
+                  version: latest
 
-    - name: Upload coverage
-      uses: codecov/codecov-action@v3
-      with:
-        files: ./coverage.out
+    test:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+
+            - name: Set up Go
+              uses: actions/setup-go@v4
+              with:
+                  go-version: '1.21'
+
+            - name: Test
+              run: go test -v -race -coverprofile=coverage.out ./...
+
+            - name: Upload coverage
+              uses: codecov/codecov-action@v3
+              with:
+                  files: ./coverage.out
+
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+
+            - name: Set up Go
+              uses: actions/setup-go@v4
+              with:
+                  go-version: '1.21'
+
+            - name: Build binpack-cli
+              run: |
+                  cd pkg/binpack/generator/cmd/binpack-cli
+                  go build -v -o binpack-cli
+
+            - name: Test binpack-cli validate
+              run: |
+                  cd pkg/binpack/generator/cmd/binpack-cli
+                  ./binpack-cli validate -pkg ../../../../../internal/binpack/testdata/validate -type ValidPacket
+
+    benchmark:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+
+            - name: Set up Go
+              uses: actions/setup-go@v4
+              with:
+                  go-version: '1.21'
+
+            - name: Run benchmarks
+              run: go test -bench=. -benchmem -run=^$ ./...
