--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
                   go-version: '1.21'
 
             - name: Test
-              run: go test -v -race -coverprofile=coverage.out ./...
+              run: go test -v -coverprofile=coverage.out $(go list ./... | grep -v /examples/)
 
             - name: Upload coverage
               uses: codecov/codecov-action@v3
@@ -71,4 +71,4 @@ jobs:
                   go-version: '1.21'
 
             - name: Run benchmarks
-              run: go test -bench=. -benchmem -run=^$ ./...
+              run: go test -bench=. -benchmem -run=^$ $(go list ./... | grep -v /examples/)
