--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,11 @@ jobs:
             - name: Test
               run: go test -v -coverprofile=coverage.out $(go list ./... | grep -v /examples/)
 
-            - name: Upload coverage
-              uses: codecov/codecov-action@v3
+            - name: Upload coverage reports to Codecov
+              uses: codecov/codecov-action@v5
               with:
                   files: ./coverage.out
+                  token: ${{ secrets.CODECOV_TOKEN }}
 
     build:
         runs-on: ubuntu-latest
