--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
               uses: golangci/golangci-lint-action@v3
               with:
                   version: latest
-                  args: ./pkg/... ./internal/...
+                  args: ./pkg/...
 
     test:
         runs-on: ubuntu-latest
@@ -34,7 +34,7 @@ jobs:
                   go-version: '1.21'
 
             - name: Test
-              run: go test -v -coverprofile=coverage.out $(go list ./... | grep -v /examples/)
+              run: go test -v -coverprofile=coverage.out ./pkg/...
 
             - name: Upload coverage reports to Codecov
               uses: codecov/codecov-action@v5
@@ -73,4 +73,4 @@ jobs:
                   go-version: '1.21'
 
             - name: Run benchmarks
-              run: go test -bench=. -benchmem -run=^$ $(go list ./... | grep -v /examples/)
+              run: go test -bench=. -benchmem -run=^$ ./pkg/...
